<resources>
    <string name="whats_new_dialog_title">New feature !</string>
    <string name="whats_new_dialog_message">We create a daily Quran Reading Schedule to help you finish reciting by the end of selected period. Ramadan Moubarak</string>
    <string name="about_five_prayers">About Five Prayers</string>
    <string name="open_source_projects_used">Open Source Projects Used</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="license_summary">GNU General Public License v3</string>
    <string name="start_accept_privacy_policy">In order to comply with the European General Data Protection Regulation (GDPR), we herby draw your attention to Five Prayers Android\'s privacy policy. Please read it carefully.\nYou must accept it to send us the bug report.</string>
    <string name="read_privacy_policy">Read privacy policy</string>
    <string name="sorry_string">Sorry, that should not have happened.</string>
    <string name="what_happened_headline">What happened:</string>
    <string name="info_labels">Language:\\nGMT Time:\\nPackage:\\nVersion:\\nOS version:</string>
    <string name="what_device_headline">Info:</string>
    <string name="error_details_headline">Details:</string>
    <string name="your_comment">Your comment (in English):</string>
    <string name="error_report_button_text">Report this error via e-mail</string>
    <string name="error_report_open_github_notice">Please check whether an issue discussing your crash already exists. When creating duplicate tickets, you take time from us which we could spend with fixing the actual bug.</string>
    <string name="copy_for_github">Copy formatted report</string>
    <string name="error_report_open_issue_button_text">Report error on GitHub</string>
    <string name="msg_copied">Message copied</string>
    <string name="share_dialog_title">share_dialog_title</string>
    <string name="permission_denied">permission_denied</string>
    <string name="common.cancel">Cancel</string>
    <string name="common.ok">OK</string>
    <string name="common.accept">Accept</string>
    <string name="common.decline">Decline</string>
    <string name="common.error">Error</string>
    <string name="common_alert">Alert</string>
    <string name="common_page">Page</string>
    <string name="common.loading">Loading, please wait …</string>
    <string name="common.sunrise">Sunrise</string>
    <string name="common.sunset">Sunset</string>
    <string name="common.close">Close</string>
    <string name="common.license">license</string>
    <string name="common.offline">Offline</string>
    <string name="common.plus" translatable="false">+</string>
    <string name="common.minus" translatable="false">-</string>
    <string name="common.minutes">minutes</string>
    <string name="common.hours.separator">h</string>
    <string name="common.minutes.separator">m</string>
    <string name="common.in">in</string>
    <string name="common.at">at</string>
    <string name="common.from">from</string>
    <string name="common.to">to</string>
    <string name="common.ayah">verse</string>
    <string name="common.day">Day</string>
    <string name="common.update">Update</string>
    <string name="common.startdate">Start Date</string>
    <string name="common.once_in_four_month">Once in four months</string>
    <string name="common.once_in_two_month">Once in two months</string>
    <string name="common.once_a_month">Once a month</string>
    <string name="common.once_in_three_weeks">Once in three weeks</string>
    <string name="common.twice_a_month">Twice a month</string>
    <string name="common.three_times_a_month">Three times a month</string>
    <string name="common.four_times_a_month">Four times a month</string>
    <string name="common_see_more">See more</string>
    <string name="location_alert_title">Location Error</string>
    <string name="location_alert_settings_button_title">Enable location service</string>
    <string name="location_alert_manual_position_button_title">Set location manually</string>
    <string name="app_name">Five Prayers</string>
    <string name="title_home">Prayers</string>
    <string name="title_dashboard">Services</string>
    <string name="title_settings">Settings</string>
    <string name="label.unknown_location">Unknown Location</string>
    <string name="simple_widget_description">Simple Widget</string>
    <string name="clock_widget_description">Clock Widget</string>
    <string name="next_prayer_widget_description">Next Prayer Widget</string>
    <string name="theme_preference_section">Appearance</string>
    <string name="theme_preference_title">Theme</string>
    <string name="theme_preference_dialog_title">Choose your preferred theme</string>
    <string name="theme_preference_name_white_blue">Blue sky (Default)</string>
    <string name="theme_preference_name_dark_orange">Orange night</string>
    <string name="theme_preference_name_dark_Turquoise">Nightly aurore</string>
    <string name="theme_preference_use_arabic_locale">Arabic mode (الوضع العربي)</string>
    <string name="theme_preference_use_arabic_locale_summay">Use Arabic for application interface</string>
    <string name="theme_preference_numerals_title">Numerals type</string>
    <string name="theme_preference_numerals_dialog_title">Choose numerals type</string>
    <string name="theme_preference_numerals_type_arabic_indic">Arabic–Indic numerals</string>
    <string name="theme_preference_numerals_type_arabic">Arabic numerals</string>
    <string name="app_intro_frag_1_title">Welcome to Five Prayers Android</string>
    <string name="app_intro_frag_1_description">An open source set of muslim tools, lightweight and ads free</string>
    <string name="app_intro_frag_2_title">Privacy Policy</string>
    <string name="app_intro_frag_2_description">Five Prayers Android project aims to provide a private,
        anonymous and ads free experience for all users. Therefore, the app does not collect any data without your consent</string>
    <string name="app_intro_frag_3_title">Use your location data</string>
    <string name="app_intro_frag_3_description">In order to calculate prayer timings effectively,
        this application need your permission to use your location capabilities. (recommended)</string>
    <string name="app_intro_frag_3_5_description">We need also your permission to use background location capabilities
        to update prayer timings even when the app is closed or not used, please select \"allow all the time option\" in the next screen (recommended)</string>
    <string name="app_intro_frag_4_title">Allow Five Prayers to send notifications</string>
    <string name="app_intro_frag_4_description">We need your permission to send you Adhan notifications, without this, Adhan calls will not works !
        Please select \"allow\" in the next screen (recommended)</string>
    <string name="app_intro_frag_5_title">Enjoy !</string>
    <string name="app_intro_frag_5_description">Five Prayer Android introduces great features and capabilities for all users,
        like : Worldwide Prayer Timings, different calculation methods, notifications, reads Adhan, Qibla direction and more</string>
    <string name="app_intro_permission_denied_dialog_title">Information</string>
    <string name="app_intro_permission_denied_dialog_message">The application needs to know your location to calculate prayer times correctly. You can set your location manually in the settings screen.</string>
    <string name="last_update_time_key">last_update_time_key</string>
    <string name="calendar_view_title">Prayer Calendar in</string>
    <string name="title_calendar">Prayer Calendar</string>
    <string name="desc_calendar_view_title">Monthly Prayer table</string>
    <string name="FAJR">As`Sobh (Fajr)</string>
    <string name="SUNRISE">Sunrise</string>
    <string name="DOHA">Ad`Dhuha</string>
    <string name="DHOHR">Ad`Dohr</string>
    <string name="ASR">Al Asr</string>
    <string name="MAGHRIB">Al Maghreb</string>
    <string name="ICHA">Al Ichaa</string>
    <string name="LAST_THIRD_OF_THE_NIGHT">Last third of the Night</string>
    <string name="SHORT_FAJR">Fajr</string>
    <string name="SHORT_SUNRISE">Sunrise</string>
    <string name="SHORT_DHOHR">Dohr</string>
    <string name="SHORT_ASR">Asr</string>
    <string name="SHORT_MAGHRIB">Maghreb</string>
    <string name="SHORT_ICHA">Ichaa</string>
    <string name="FIRST_DAY_OF_YEAR">Hijri new year</string>
    <string name="YAWM_ASHURA">Yawm Ashura</string>
    <string name="MAWLID_A_NABAWI">Al Mawlid A Nabawi</string>
    <string name="LAILAT_AL_MIRAJ">Lailat Al Miiraj</string>
    <string name="MID_SHAABAN_NIGHT">Laila Al Baraah</string>
    <string name="MID_SHAABAN">Mid Of Shaaban</string>
    <string name="FIRST_DAY_OF_RAMADAN">1st Day Of Ramadan</string>
    <string name="DAY_20_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_21_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_22_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_23_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_24_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_25_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_26_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_27_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_28_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_29_OF_RAMADAN">Last days of Ramadan</string>
    <string name="DAY_30_OF_RAMADAN">Last days of Ramadan</string>
    <string name="EID_AL_FITR">Eid Al Fitr</string>
    <string name="FIRST_DAY_OF_AL_Hajj">Al Hajj</string>
    <string name="DAY_OF_ARAFAH">Day Of Arafah</string>
    <string name="EID_AL_ADHA">Eid Al Adha</string>
    <string name="FOURTH_DAY_OF_AL_Hajj">Al Hajj</string>
    <string name="FIFTH_DAY_OF_AL_Hajj">Al Hajj</string>
    <string name="SIXT_DAY_OF_AL_Hajj">Al Hajj</string>
    <string name="hijri">Hijri</string>
    <string name="hijri_month_1">Mouharram</string>
    <string name="hijri_month_2">Safar</string>
    <string name="hijri_month_3">Rabii Al Awal</string>
    <string name="hijri_month_4">Rabii Ath`Thani</string>
    <string name="hijri_month_5">Joumada Al Oula</string>
    <string name="hijri_month_6">Joumada Ath`Thania</string>
    <string name="hijri_month_7">Rajab</string>
    <string name="hijri_month_8">Chaabane</string>
    <string name="hijri_month_9">Ramadan</string>
    <string name="hijri_month_10">Chawwal</string>
    <string name="hijri_month_11">Dhou Al Qi`da</string>
    <string name="hijri_month_12">Dhou Al Hijja</string>
    <string name="method_fajr_angle">Fajr angle</string>
    <string name="method_ichaa_angle">Ichaa angle</string>
    <string name="method_shia_ithna_ansari">Shia Ithna Ashari, Leva Research Institute, Qum</string>
    <string name="method_university_of_islamic_sciences_karachi">University of Islamic Sciences, Karachi</string>
    <string name="method_islamic_society_of_north_america">Islamic Society of North America</string>
    <string name="method_muslim_world_league">Muslim World League</string>
    <string name="method_umm_al_qura_university_makkah">Umm al-Qura University</string>
    <string name="method_egyptian_general_authority_of_survey">Egyptian General Authority of Survey</string>
    <string name="method_institute_of_geophysics_university_of_tehran">Institute of Geophysics, University of Tehran</string>
    <string name="method_gulf_region">Gulf Region</string>
    <string name="method_kuwait">Kuwait Method</string>
    <string name="method_qatar">Qatar Method</string>
    <string name="message_wait_for_quran_files">Preparing Quran files, please wait…</string>
    <string name="message_download_quran_files_in_progress">Download in progress … %1$d%%</string>
    <string name="message_unzip_quran_files_in_progress">Unzipping Quran files in progress … %1$d\/%2$d</string>
</resources>