<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hbouzidi.fiveprayers.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hbouzidi.fiveprayers.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.hbouzidi.fiveprayers.ui.settings.SettingsFragment"
        android:label="@string/title_settings"/>
</navigation>
