<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ErrorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/errorSorryView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/sorry_string"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_bug_80dp"
                app:drawableLeftCompat="@drawable/ic_bug_80dp" />

            <TextView
                android:id="@+id/errorDeviceHeadlineView"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/boulder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/what_device_headline"/>

            <LinearLayout
                android:id="@+id/errorInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/errorInfoLabelsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stratos"
                    android:textStyle="bold"
                    android:text="@string/info_labels"/>

                <HorizontalScrollView
                    android:paddingLeft="16dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/errorInfosView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </HorizontalScrollView>

            </LinearLayout>

            <TextView
                android:id="@+id/errorDetailView"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/boulder"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/error_details_headline"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView"
                android:layout_gravity="center" >
                <TextView
                    android:id="@+id/errorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:typeface="monospace"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/errorYourComment"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/boulder"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/your_comment"/>

            <EditText
                android:id="@+id/errorCommentBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:inputType="" />

            <Button
                android:id="@+id/errorReportEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:background="@drawable/button"
                android:text="@string/error_report_button_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/mine_shaft"
                android:textStyle="bold"
                android:text="@string/error_report_open_github_notice" />

            <Button
                android:id="@+id/errorReportCopyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:background="@drawable/button"
                android:text="@string/copy_for_github" />

            <Button
                android:id="@+id/errorReportGitHubButton"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:background="@drawable/button"
                android:text="@string/error_report_open_issue_button_text" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>